# species_identifier

./: .gitignore  LICENSE  README.md  analyzer.py  config.yaml  identify_species_from_MD_022526.py  pyproject.toml  requirements.txt
examples/: config.yaml  example_results.csv
src/: analyzer.py
src/species_identifier/: __init__.py  analyzer.py
