[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "species_identifier"
version = "0.1.0"
description = "Graph-based species counting for MD trajectories"
authors = [
    {name = "Mengren Bill Liu"}
]
dependencies = [
    "ase",
    "numpy",
    "pyyaml",
]
requires-python = ">=3.9"

[project.scripts]
species-analyze = "src.analyzer:main"

[tool.setuptools]
packages = ["src"]