[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "species-identifier"
version = "0.2.0"
description = "A graph-based species identification tool for surface-inclusive MD trajectories."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "ase>=3.22.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.60.0"
]

[project.scripts]
species-analyze = "species_identifier.analyzer:main"